[package]
name = "open_film"
version = "0.1.0"
authors = ["miyabi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.1.1", features=["image", "canvas"]}
iced_native = "0.2.0"
ffmpeg-next = "4.3.4"
chrono = "0.4"
async-std = { version="1.0", features=["unstable"] }